--- a/llt.bib
+++ b/llt.bib
@@ -1,5 +1,11 @@
 % This file was created with JabRef 2.4.2.
 % Encoding: UTF8
+@techreport{barrow1977parametric,
+  title={Parametric correspondence and chamfer matching: Two new techniques for image matching},
+  author={Barrow, Harry G and Tenenbaum, Jay M and Bolles, Robert C and Wolf, Helen C},
+  year={1977},
+  institution={SRI INTERNATIONAL MENLO PARK CA ARTIFICIAL INTELLIGENCE CENTER}
+}
 
 
 @misc{nixsensorltd, title={Nix Mini Color Sensor | The perfect tool for paint color matching}, url={https://www.nixsensor.com/nix-mini/}, journal={Nix Sensor Ltd}} 
