--- a/thesis.tex
+++ b/thesis.tex
@@ -49,7 +49,7 @@ breaklines=true,breakatwhitespace=true}
 
 \newcommand*\mean[1]{\bar{#1}}
 \newcommand{\versionOneExt}{LSH-Inspired Semantic Extraction }
-\newcommand{\versionTwoExt}{Chamfer Distance based Semantic Extraction }
+\newcommand{\versionTwoExt}{Chamfer Distance-Inspired Semantic Extraction }
 
 \newcommand{\versionOneRet}{LSH-Inspired Retrieval Engine }
 \newcommand{\versionTwoRet}{Chamfer Distance based Retrieval Engine  }
@@ -66,7 +66,7 @@ breaklines=true,breakatwhitespace=true}
 
 
 \author{Clarence Cheong Weihan}
-\title{Large Scale Extraction and Retrieval of Video Semantics for Carpark Surveillance Videos}
+\title{Extraction and Retrieval of Object Semantics for Long-Term Car Park Surveillance Videos }
 \submissionyear{2018}
 \submissionmonth{August}
 \faculty{Faculty of Computing and Informatics}
