--- a/2literature-review.tex
+++ b/2literature-review.tex
@@ -8,6 +8,8 @@
 
 
 
+\section{Related Work}
+
 \cc{create a table: rgb: how many colors, x11 how many color, munsell: x number of color etc}
 https://people.csail.mit.edu/jaffer/Color/Dictionaries
 %https://en.wikipedia.org/wiki/Cone_cell
