--- a/4vehicle-semantics-extraction.tex
+++ b/4vehicle-semantics-extraction.tex
@@ -5,12 +5,15 @@
 
 \section{Introduction}
 
-In this chapter, the implementation of the vehicle semantic extraction module is discussed in detail. First, the process to separate the background and the objects of interest is discussed briefly in Section \ref{subsection:fundamental}. 
-%Next, the atom-based quantization and database schema is introduced for both the \versionOne and \versionTwo based framework in Section \ref{section:dbschema}. 
-Next, both the vehicle semantic extraction modules can then be thoroughly described in Section \ref{section:semantic_lsh} and Section \ref{section:semantic_chamfer}.
+In this chapter, the implementation of the vehicle semantic extraction module is discussed in detail. 
+First, an atom-based quantization process of the video data is introduced in Section \ref{section:atoms}. This quantization technique was implemented for both \versionOneExt and \versionTwoExt frameworks. Next, the process to separate the background and the objects of interest is discussed briefly in Section \ref{subsection:fundamental}. 
+This is then followed by the discussion of both the vehicle semantic extraction modules which are thoroughly described in Section \ref{section:semantic_lsh} and Section \ref{section:semantic_chamfer}.
 
+%may be good to add a short paragraph to briefly describe and reinforce what "vehicle semantics extraction" is in relation to the big problem and that two extractions methods are introduced in this research and why two .... along with giving a brief distinction between the two.
 
-%While the implementation and adoption of the work proposed in \cite{lim2017} enabled the identification of moving objects from the background image, these information were not saved anywhere. First, a database schema was drawn out to determine the types of information that could be extracted from these foreground objects. Next, 
+As the focus of this work revolves around car park surveillance video footages, color and motion information are usually key information used to describe vehicles activity. In order to design a retrieval engine for car park surveillance footage, an accurate extraction of these information are crucial. 
+
+\cc{ hmm... brief distinction between the two: one is prototype... the other one is better version?}
 
 
 
@@ -22,7 +25,51 @@ As describe in Section \ref{subsec:scope}, the two major semantics extracted in 
 what is semantics
 
 
-\section{Fundamental Framework}
+\section{Atom-based Quantization}
+\label{section:atoms}
+
+As the utilization of video data is the central focus in this work, there was a need for coming up with a way to easily manipulate and represent the video information. As video data can be commonly represented using the 3 dimensional space (X-axis, Y-axis, \& time-axis), there was an opportunity to convert the continuous data into discrete data blocks.     
+
+
+In order to design a framework for large-scale extraction and retrieval of video semantics, this work adopted the concept of "atoms" as coined by \cite{castanon2016retrieval} which enabled quantization of the video input into individual 3D spatial-temporal cubes which consist of the X-axis, Y-axis and T-axis. In this work, an atom is defined as a group of cells at a similar spatial location, that spans a certain fixed number of frames; hence forming a spatio-temporal `cube'.
+
+As described in Section \ref{section:dataset_used}, the input video data has a resolution of 640$\times$480 pixels and frame rate of 10$fps$, the dimensions of each atoms ($\alpha$) were analytically set to $\alpha_{width}=32$ pixels, $\alpha_{height}=24$ pixels and $\alpha_{time}=10$ frames, which represents the temporal duration of one second. The resolution of the atom ($\alpha_{width},\alpha_{height}$) were set as such so that the video resolution can be uniformly divided by 20 atoms across both its width and height as illustrated in Figure \ref{fig:viewfromcamera}. Hence, with this setup, each atom can be uniquely identified using the $X, Y$ and $T$ identifiers.
+
+
+
+\begin{figure}[hbt!]\centering
+\includegraphics[width=.7\textwidth]{image/general/atom.PNG}
+\caption{Quantization of Video Data into Atoms}
+\label{fig:atoms}
+\end{figure}
+
+The use of these atom-based spatial-temporal cube is paramount in this work. By applying the quantization of data in the X,Y and T-axis, the atom-based structure enables two major types of queries to be performed conveniently. Figure \ref{fig:typesofQuery} illustrates the types of queries which are regularly desired when working with video data: Region of Interest (ROI) query \& Time-slicing query. More often than not, the queries used in real world applications are in the form of a combination of both the ROI and time-slicing query where the users are interested in certain activity that occurred in a particular location given a set time frame. 
+
+
+
+\begin{figure}[htb!]
+  \centering
+  
+
+\begin{tabular}{cc}
+ \includegraphics[width=0.4\linewidth]{image/general/atom_ROI.PNG} &  \includegraphics[width=0.4\linewidth]{image/general/atom_time_slicing.PNG}\\
+(a) Region of Interest & (b) Time Slicing
+\end{tabular}
+
+
+\caption{Types of Queries} \label{fig:typesofQuery}
+\end{figure}
+
+
+\begin{comment}
+\section{Database Schema}
+
+\cc{do i need a database schema section?}
+
+\end{comment}
+
+
+\section{Vehicle Extraction}
 \label{subsection:fundamental}
 
 Before the video dataset can be channelled to the vehicle semantics extraction, some pre-processing work has to be done. The fundamental framework was adopted from a portion of the work done by \cite{lim2017} where the author developed a framework to detect moving objects in a video using popular techniques such as background subtraction was applied to differentiate between static background and moving objects as depicted in Figure \ref{fig:bgs}. 
@@ -37,7 +84,7 @@ Before the video dataset can be channelled to the vehicle semantics extraction, 
 \label{fig:bgs}
 \end{figure}
 
-As the vanilla application of background subtraction often results with noisy output, the proposed algorithm used in \cite{lim2017} implemented a combination of adaptive learning and frame differencing method. This step was used to detect and extract moving objects (foreground blobs). This is then followed by several erosion and dilation morphology operators to further reduce the noise and to provide a better foreground blob at the end of the process.
+As the vanilla application of background subtraction often results with noisy output, the proposed algorithm used in \cite{lim2017} implemented a combination of adaptive learning and frame differencing method. This step was used to detect and extract moving objects (foreground blobs). This is then followed by several erosion and dilation morphology operations to further reduce the noise and to provide a better foreground blob at the end of the process.
 
 \begin{figure}[htb!]
   \centering
@@ -74,49 +121,7 @@ In the proposed method pipeline, the work of \cite{redmon2016you} namely YOLOv2 
 With that in place, each of the blobs which were identified as a vehicle were tracked, on the other hand, blobs which were not identified as a vehicle was left as a possible candidate. This is done in view of misidentification due to poor lighting conditions or error during the background subtraction process. For each of the vehicle blobs, the semantic extraction module can now proceed.  
 
 
-\section{Atom-based Quantization}
-\label{section:atoms}
 
-As the utilization of video data is the central focus in this work, there was a need for coming up with a way to easily manipulate and represent the video information. As video data can be commonly represented using the 3 dimensional space (X-axis, Y-axis, \& time-axis), there was an opportunity to convert the continuous data into discrete data blocks.     
-
-
-In order to design a framework for large-scale extraction and retrieval of video semantics, this work adopted the concept of "atoms" as coined by \cite{castanon2016retrieval} which enabled quantization of the video input into individual 3D spatial-temporal cubes which consist of the X-axis, Y-axis and T-axis. In this work, an atom is defined as a group of cells at a similar spatial location, that spans a certain fixed number of frames; hence forming a spatio-temporal `cube'.
-
-As described in Section \ref{section:dataset_used}, the input video data has a resolution of 640$\times$480 pixels and frame rate of 10$fps$, the dimensions of each atoms ($\alpha$) were analytically set to $\alpha_{width}=32$ pixels, $\alpha_{height}=24$ pixels and $\alpha_{time}=10$ frames, which represents the temporal duration of one second. The resolution of the atom ($\alpha_{width},\alpha_{height}$) were set as such so that the video resolution can be uniformly divided by 20 atoms across both its width and height as illustrated in Figure \ref{fig:viewfromcamera}. Hence, with this setup, each atom can be uniquely identified using the $X, Y$ and $T$ identifiers.
-
-
-
-\begin{figure}[hbt!]\centering
-\includegraphics[width=.7\textwidth]{image/general/atom.PNG}
-\caption{Quantization of Video Data into Atoms}
-\label{fig:atoms}
-\end{figure}
-
-The use of these atom-based spatial-temporal cube is paramount in this work. By applying the quantization of data in the X,Y and T-axis, the atom-based structure enables two major types of queries to be performed conveniently. Figure \ref{fig:typesofQuery} illustrates the types of queries which are regularly desired when working with video data: Region of Interest (ROI) query \& Time-slicing query. More often than not, the queries used in real world applications are in the form of a combination of both the ROI and time-slicing query where the users are interested in certain activity that occured in a particular location given a set time frame. 
-
-
-
-
-\begin{figure}[htb!]
-  \centering
-  
-
-\begin{tabular}{cc}
- \includegraphics[width=0.4\linewidth]{image/general/atom_ROI.PNG} &  \includegraphics[width=0.4\linewidth]{image/general/atom_time_slicing.PNG}\\
-(a) Region of Interest & (b) Time Slicing
-\end{tabular}
-
-
-\caption{Types of Queries} \label{fig:typesofQuery}
-\end{figure}
-
-
-\begin{comment}
-\section{Database Schema}
-
-\cc{do i need a database schema section?}
-
-\end{comment}
 
 
 \section{Semantic Extraction} 
@@ -251,7 +256,7 @@ While motions are not as subjective as the concept of colors, text based descrip
 
 
 
-In the case of a carpark scene, the trajectory information from each vehicle is important, it is a paramount task to ensure that the motion information from each vehicle is captured and stored. Since the types of motion performed in a carpark setting varies from user to user, instead of generating a fine representation of motion such the conventional motion vector, these information were broken into smaller motion information and stored into the database. Both the suggested motion semantics extraction frameworks deploys different extraction methods which would be discussed further in this chapter.
+In the case of a car park scene, the trajectory information from each vehicle is important, it is a paramount task to ensure that the motion information from each vehicle is captured and stored. Since the types of motion performed in a car park setting varies from user to user, instead of generating a fine representation of motion such the conventional motion vector, these information were broken into smaller motion information and stored into the database. Both the suggested motion semantics extraction frameworks deploys different extraction methods which would be discussed further in this chapter.
 
 
 
@@ -264,7 +269,7 @@ In the case of a carpark scene, the trajectory information from each vehicle is 
 In this subsection, the extraction process of the other low level semantics are discussed briefly. As mentioned earlier, several other semantics were extracted for this work, namely, the time and date information, object type as well as object size. As the extractions of these semantics were simple and/or played little-to-no roles in the both the extraction module and retrieval engine, the process will be described here.
 
 \subsubsection{Date \& Time}
-During course of the dataset collection, the camera was set to name the recorded files according to the time and date. As described in Section \ref{section:dataset_used}, the camera was set to record video clips from 8:30am to 6:30pm in the evening with each clip being 6 minutes long. As the filename contains both the time and date information, the date information can be easily extracted while the time information can be deduced when a vehicle is observed in the carpark scene. 
+During course of the dataset collection, the camera was set to name the recorded files according to the time and date. As described in Section \ref{section:dataset_used}, the camera was set to record video clips from 8:30am to 6:30pm in the evening with each clip being 6 minutes long. As the filename contains both the time and date information, the date information can be easily extracted while the time information can be deduced when a vehicle is observed in the car park scene. 
 
 \begin{align}
 \label{eq:file_timing}
@@ -275,7 +280,7 @@ During course of the dataset collection, the camera was set to name the recorded
 Upon extracting these information, simple formating is done to ensure these information conform to the typical SQL database requirements.
 
 \subsubsection{Object Type \& Size}
-Since the object of interest in this work are the vehicles in the carpark scene, YOLOv2 was used to assist the validation of the foreground object detected by the background subtraction method as described in Section \ref{subsection:fundamental}. With that in place, all the objects which were detected were assumed to fall under the "vehicle" class. As for the object size, the foreground objects' bounding box's size were saved in the database as the object size.
+Since the object of interest in this work are the vehicles in the car park scene, YOLOv2 was used to assist the validation of the foreground object detected by the background subtraction method as described in Section \ref{subsection:fundamental}. With that in place, all the objects which were detected were assumed to fall under the "vehicle" class. As for the object size, the foreground objects' bounding box's size were saved in the database as the object size.
 
 
 
@@ -871,7 +876,7 @@ As the background subtraction method has identified the vehicle's location, the 
 
 Now, in order to determine the motion of the vehicle, the order and sequence of the centroids' t-coordinates was used to represents the motion and the trajectory, $P$, of a vehicle. Figure \ref{fig:motionExample} illustrates the property of this setup which allows trajectories of vehicles to be identified by only using the centroid information. Upon obtaining the location of the centroids, the x \& y-coordinate can be inferred as the atom's width and heights were predefined. Finally, the sequence of the t-coordinate along with the x \& y-coordinates are written into the database as a means of collecting motion information.
 
-As a vehicle in the carpark scene generally does not move in an irregular motion, the sequence information of the vehicle's centroid holds sufficient clue for the reconstruction and estimation of a vehicle's trajectory within the carpark scene. This setup also allows reduction of overhead computational cost and storage space which might occur when converting these centroid information into finer vector features. 
+As a vehicle in the car park scene generally does not move in an irregular motion, the sequence information of the vehicle's centroid holds sufficient clue for the reconstruction and estimation of a vehicle's trajectory within the car park scene. This setup also allows reduction of overhead computational cost and storage space which might occur when converting these centroid information into finer vector features. 
 
 
 \begin{figure}[hbt!]\centering
